tests/parser_cases/invalid/bad_const_decl.ob0
MODULE Main;
CONST answer 42;
BEGIN
END Main.
